[package]
name = "ok-card"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ok-card"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.25.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
chrono = "0.4"
rand = "0.8"
